--- a/app/src/main/res/layout-sw600dp/fragment_location_map.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_location_map.xml
@@ -107,55 +107,9 @@
             android:layout_height="@dimen/grid_cell_height" />
     </RelativeLayout>
 
-
     <!-- made visible via @+id/cmd_unhide_bookmark_list and as navigation drawer
         width = 5Buttons à 60 dp
     -->
-    <RelativeLayout
-        android:id="@+id/fragment_bookmark_list"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        >
-        <!-- Icon toolbar -->
-        <LinearLayout android:id="@+id/commands" android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:orientation="horizontal"
-            >
-
-            <!-- hide fragment -->
-            <ImageButton android:id="@+id/cmd_cancel_bookmark_list"
-                android:src="@drawable/ic_action_previous_item"
-                android:contentDescription="@string/title_close"
-                style="@style/AppTheme.ImageButton"
-                />
-
-            <ImageButton android:id="@+id/cmd_edit"
-                android:src="@drawable/ic_action_edit"
-                android:contentDescription="@string/rename_menu_title"
-                style="@style/AppTheme.ImageButton"
-                />
-
-            <ImageButton android:id="@+id/cmd_delete"
-                android:src="@drawable/ic_action_delete"
-                android:contentDescription="@string/delete_menu_title"
-                style="@style/AppTheme.ImageButton"
-                />
-
-        </LinearLayout>
-
-        <!-- listview with bookmarks -->
-        <ListView android:id="@+id/android:list"
-            android:layout_width="fill_parent" android:layout_height="fill_parent"
-            android:layout_below="@id/commands"
-            android:choiceMode="singleChoice"
-            android:layout_alignParentRight="@+id/commands"
-            android:layout_alignParentLeft="@+id/commands"
-            android:dividerHeight="2dp"
-            android:fastScrollEnabled="true"/>
-
-    </RelativeLayout>
+    <include layout="@layout/navdrawer_location_map_bookmarklist" />
 
 </android.support.v4.widget.DrawerLayout>
